== Released [attachment:wiki:SoftwareReleases:eLife-1.6b9.zip V1.6b0]   ==

''' Jetty '''

Fixed bug with https updating.

''' General '''

Improved concurrency handling in the servlet interface.

== Released [attachment:wiki:SoftwareReleases:eLife-1.6b8.zip V1.6b8]   ==

''' Jetty '''

Fixed bug with https updating.

== Released [attachment:wiki:SoftwareReleases:eLife-1.6b7.zip V1.6b7]   ==

''' Jetty '''

Updated sessions to be explicitly sent via GET or POST parameters, rather than relying on cookies. To support ticket [ticket:567]

== Released [attachment:wiki:SoftwareReleases:eLife-1.6b6.zip V1.6b6]   ==

''' Script '''

Added the ability for a jython script to find the state of a label using the getLabelState call.  
The returned value is the key from the list of strings configured for use for the label device.
The pseudocode to use this would be 
  * listen for an event from a DLT
  * call getLabelState
  * execute parts of the script as appropriate based on the label return value. 

''' General '''

Added hooks for models to more easily add checksums to outgoing messages.
Override the  following method.

{{{
	Byte addCheckSum(byte [] rawMessage) 
	
	Store the resulting checksum from teh bytes of rawMessage into result and return it, return null for no checksum.
}}}	
	
== Released [attachment:wiki:SoftwareReleases:eLife-1.6b5.zip V1.6b5]   ==

''' Jetty '''

Ensure message and ID list commands do not crash the server with a HTTPS client. Resolves ticket [ticket:557]

== Released [attachment:wiki:SoftwareReleases:eLife-1.6b4.zip V1.6b4]   ==

''' Jetty ''' 

Ensure HTTPS server can deliver static HTML from address ../www. resolves [ticket:553]

== Released [attachment:wiki:SoftwareReleases:eLife-1.6b3.zip V1.6b3]   ==

''' Jetty ''' 

Updated file mappings

== Released [attachment:wiki:SoftwareReleases:eLife-1.6b2.zip V1.6b2]   ==

''' Calendar ''' 
 
Fixed null pointer on macro save [ticket:543]
