@@ -1,4 +1,4 @@
-#Sun Nov 19 11:31:26 EST 2006
+#Sun Nov 19 23:20:20 EST 2006
 major_version=1.6b
-minor_version=9
+minor_version=10
 app_name=eLife
