@@ -1,0 +1,14 @@
+/**
+ * 
+ */
+package au.com.BI.M1;
+
+import au.com.BI.Command.Command;
+
+/**
+ * @author colin
+ *
+ */
+public class M1FlashCommand extends Command {
+
+}
